bootstrap/argo-cd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
  # tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  tls:
  - hosts:
    - "argo"
  rules:
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: argocd-server
            port:
              name: http
